Issue #1774278 by ACF: Update views_test_data schema and variables.

--- a/tests/views_test_config/config/views.view.test_access_perm.yml
+++ b/tests/views_test_config/config/views.view.test_access_perm.yml
@@ -7,7 +7,7 @@ display:
   default:
     display_options:
       access:
-        perm: 'views_test test permission'
+        perm: 'views_test_data test permission'
         type: perm
       cache:
         type: none
