--- a/tests/views_test_data/config/views.view.test_click_sort.yml
+++ b/tests/views_test_data/config/views.view.test_click_sort.yml
@@ -1,5 +1,5 @@
 api_version: '3.0'
-base_table: views_test
+base_table: views_test_data
 core: '8'
 description: ''
 disabled: '0'
@@ -9,15 +9,15 @@ display:
       fields:
         id:
           id: id
-          table: views_test
+          table: views_test_data
           field: id
         name:
           id: name
-          table: views_test
+          table: views_test_data
           field: name
         created:
           id: created
-          table: views_test
+          table: views_test_data
           field: created
       display_options:
         access:
