Issue #1787270 by damiankloip | dawehner: Fixed Split up default views into one per module.

--- a/config/views.view.archive.yml
+++ b/config/views.view.archive.yml
@@ -1,5 +1,6 @@
 disabled: true
 api_version: '3.0'
+module: node
 name: archive
 description: 'Display a list of months that link to content for that month.'
 tag: default
