--- a/config/views.view.backlinks.yml
+++ b/config/views.view.backlinks.yml
@@ -1,5 +1,6 @@
 disabled: true
 api_version: '3.0'
+module: search
 name: backlinks
 description: 'Displays a list of nodes that link to the node, using the search backlinks table.'
 tag: default
