--- a/config/views.view.frontpage.yml
+++ b/config/views.view.frontpage.yml
@@ -1,5 +1,6 @@
 disabled: true
 api_version: '3.0'
+module: node
 name: frontpage
 description: 'Emulates the default Drupal front page; you may set the default home page path to this view to make it your front page.'
 tag: default
