--- a/tests/views_test_config/config/views.view.test_filter_date_between.yml
+++ b/tests/views_test_config/config/views.view.test_filter_date_between.yml
@@ -28,8 +28,10 @@ display:
         options:
           query_comment: '0'
         type: views_query
-      row_plugin: fields
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: fields
     display_plugin: default
     display_title: Master
     id: default
