--- a/tests/views_test_config/config/views.view.test_group_by_in_filters.yml
+++ b/tests/views_test_config/config/views.view.test_group_by_in_filters.yml
@@ -40,8 +40,10 @@ display:
       group_by: '1'
       pager:
         type: some
-      row_plugin: fields
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: fields
     display_plugin: default
     display_title: Master
     id: default
