--- a/tests/views_test_data/config/views.view.test_argument_default_current_user.yml
+++ b/tests/views_test_data/config/views.view.test_argument_default_current_user.yml
@@ -40,8 +40,10 @@ display:
           items_per_page: '10'
           offset: '0'
         type: full
-      row_plugin: fields
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: fields
     display_plugin: default
     display_title: Master
     id: default
