--- a/config/views.view.taxonomy_term.yml
+++ b/config/views.view.taxonomy_term.yml
@@ -26,8 +26,6 @@ display:
         type: basic
       pager:
         type: full
-      style_plugin: default
-      row_plugin: node
       sorts:
         sticky:
           id: sticky
@@ -75,6 +73,10 @@ display:
           group: 0
           expose:
             operator: false
+      style:
+        type: default
+      row:
+        type: node
   page:
     id: page
     display_title: Page
@@ -98,9 +100,11 @@ display:
         type: full
         options:
           items_per_page: 15
-      style_plugin: rss
-      row_plugin: node_rss
       path: taxonomy/term/%/%/feed
       displays:
         page: page
         default: 0
+      style:
+        type: rss
+      row:
+        type: node_rss
