--- a/tests/views_test_config/config/views.view.test_pager_none.yml
+++ b/tests/views_test_config/config/views.view.test_pager_none.yml
@@ -14,8 +14,10 @@ display:
         type: basic
       pager:
         type: none
-      row_plugin: node
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: node
     display_plugin: default
     display_title: Master
     id: default
