--- a/tests/views_test_config/config/views.view.test_pager_some.yml
+++ b/tests/views_test_config/config/views.view.test_pager_some.yml
@@ -17,8 +17,10 @@ display:
           items_per_page: '5'
           offset: '0'
         type: some
-      row_plugin: node
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: node
     display_plugin: default
     display_title: Master
     id: default
