--- a/tests/views_test_config/config/views.view.test_taxonomy_node_term_data.yml
+++ b/tests/views_test_config/config/views.view.test_taxonomy_node_term_data.yml
@@ -54,8 +54,10 @@ display:
           table: node
           vocabularies:
             tags: '0'
-      row_plugin: node
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: node
     display_plugin: default
     display_title: Master
     id: default
