--- a/tests/views_test_config/config/views.view.test_view_delete.yml
+++ b/tests/views_test_config/config/views.view.test_view_delete.yml
@@ -16,8 +16,10 @@ display:
         type: full
       query:
         type: views_query
-      row_plugin: fields
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: fields
     display_plugin: default
     display_title: Defaults
     id: default
