--- a/tests/views_test_config/config/views.view.test_view_pager_full_zero_items_per_page.yml
+++ b/tests/views_test_config/config/views.view.test_view_pager_full_zero_items_per_page.yml
@@ -34,8 +34,10 @@ display:
           items_per_page: '0'
           offset: '0'
         type: full
-      row_plugin: fields
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: fields
     display_plugin: default
     display_title: Master
     id: default
