--- a/tests/views_test_data/config/views.view.test_exposed_admin_ui.yml
+++ b/tests/views_test_data/config/views.view.test_exposed_admin_ui.yml
@@ -25,16 +25,18 @@ display:
           table: node
       pager:
         type: full
-      row_options:
-        comments: '0'
-        links: '1'
-      row_plugin: node
       sorts:
         created:
           field: created
           id: created
           table: node
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: node
+        options:
+          comments: '0'
+          links: '1'
     display_plugin: default
     display_title: Master
     id: default
