--- a/tests/views_test_data/config/views.view.test_field_output.yml
+++ b/tests/views_test_data/config/views.view.test_field_output.yml
@@ -15,11 +15,12 @@ display:
           id: name
           table: views_test_data
           field: name
-      style_plugin: html_list
+      style:
+        type: html_list
     display_plugin: default
     display_title: Master
     id: default
     position: '0'
-human_name: ""
+human_name: ''
 name: test_field_output
 tag: ''
