--- a/tests/views_test_data/config/views.view.test_filter_in_operator_ui.yml
+++ b/tests/views_test_data/config/views.view.test_filter_in_operator_ui.yml
@@ -26,8 +26,10 @@ display:
           table: node
       pager:
         type: full
-      row_plugin: fields
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: fields
     display_plugin: default
     display_title: Master
     id: default
