--- a/tests/views_test_data/config/views.view.test_views_groupby_save.yml
+++ b/tests/views_test_data/config/views.view.test_views_groupby_save.yml
@@ -14,8 +14,10 @@ display:
         type: basic
       pager:
         type: none
-      row_plugin: fields
-      style_plugin: default
+      style:
+        type: default
+      row:
+        type: fields
     display_plugin: default
     display_title: Master
     id: default
