--- a/config/views.view.frontpage.yml
+++ b/config/views.view.frontpage.yml
@@ -60,8 +60,8 @@ display:
           group: 0
           expose:
             operator: false
-  page:
-    id: page
+  page_1:
+    id: page_1
     display_title: Page
     display_plugin: page
     position: '2'
@@ -70,8 +70,8 @@ display:
         type: views_query
         options: {  }
       path: frontpage
-  feed:
-    id: feed
+  feed_1:
+    id: feed_1
     display_title: Feed
     display_plugin: feed
     position: '3'
