Issue #1793692 by damiankloip | dawehner: Fixed Feed: 'Attach to' form doesn't display all the displays.

--- a/tests/views_test_config/config/views.view.test_feed_display.yml
+++ b/tests/views_test_config/config/views.view.test_feed_display.yml
@@ -66,9 +66,7 @@ display:
     position: '0'
   feed:
     display_options:
-      displays:
-        default: default
-        page: page
+      displays: {}
       pager:
         type: some
       path: test-feed-display.xml
