Issue #1799040 by dawehner: Fixed groupwise max relationship.

--- a/tests/views_test_config/config/views.view.test_taxonomy_node_term_data.yml
+++ b/tests/views_test_config/config/views.view.test_taxonomy_node_term_data.yml
@@ -54,6 +54,12 @@ display:
           table: node
           vocabularies:
             tags: '0'
+      sorts:
+        nid:
+          field: nid
+          id: nid
+          order: DESC
+          table: nid
       style:
         type: default
       row:
