Issue #1817938 by damiankloip: Added more tokens to views.tokens.inc.

--- a/tests/views_test_config/config/views.view.test_tokens.yml
+++ b/tests/views_test_config/config/views.view.test_tokens.yml
@@ -31,9 +31,9 @@ display:
           relationship: none
           table: views_test_data
       pager:
+        type: full
         options:
-          offset: '0'
-        type: none
+          items_per_page: 10
       pager_options: {  }
     display_plugin: default
     display_title: Master
